# rye

./: pyproject.toml
rye/: Cargo.toml
rye-devtools/src/rye_devtools/: find_downloads.py
rye/src/: bootstrap.rs  downloads.inc  platform.rs  sources.rs  tui.rs
rye/src/cli/: install.rs  rye.rs
rye/tests/: test_bootstrap.rs
scripts/: pyproject.toml
