[project]
name = "scripts"
version = "1.0.0"
description = "Scripts for rye development"
authors = [{ name = "Armin Ronacher", email = "armin.ronacher@active-4.com" }]
dependencies = [
    "requests>=2.31.0",
    "isort>=5.13.2",
]
requires-python = ">= 3.11"

[project.scripts]
find-downloads = "scripts.find_downloads:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/scripts"]
